--- a/index.html
+++ b/index.html
@@ -234,16 +234,16 @@
                 </div>
                 <div class="card-container">
                     <div class="p.article-container">
-                        <img src="./assests/project-1.png" alt="Project 2" class="project-img">
+                        <img src="./assests/portfoliothumbnail" alt="Project 2" class="project-img">
                     </div>
-                    <h2 class="project-title"> Loading... </h2>
-                    <h4 class="tech.stack">Loading... </h4>
+                    <h2 class="project-title"> Portfolio Website  </h2>
+                    <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript </h4>
                     <div class="btn-container">
                         <button class="btn btn-color2 project-btn"
-                            onclick="window.open('https://github.com', '_blank')">
+                            onclick="window.open('https://lnkd.in/gZuTykg2', '_blank')">
                             Github
                         </button>
-                        <button class="btn btn-color2 project-btn" onclick="window.open('https://', '_blank')">
+                        <button class="btn btn-color2 project-btn" onclick="window.open('https://siddheshshendeportfolio.netlify.app/', '_blank')">
                             Live Demo
                         </button>
 
