--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </div>
                 <div class="card-container">
                     <div class="p.article-container">
-                        <img src="./assests/portfoliothumbnail" alt="Project 2" class="project-img">
+                        <img src="./assests/portfoliothumbnail.JPG" alt="Project 2" class="project-img">
                     </div>
                     <h2 class="project-title"> Portfolio Website  </h2>
                     <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript </h4>
