--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
                     onclick="location.href='http://www.linkedin.com/in/siddheshshende333'">
                 <img src="./assests/github.png" alt="Github profile" class="icons"
                     onclick="location.href='https://github.com/siddheshshende'">
+                    <img src="./assests/hashnode.png" alt="hashnode profile" class="icons"
+                    onclick="location.href='https://1-siddheshvlog.hashnode.dev/'">
             </div>
         </div>
 
