--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@
                         <article>
                             <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
                             <div>
+                                <h3>Material UI</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+                            <div>
                                 <h3>React.JS</h3>
                                 <p>Basic</p>
                             </div>
@@ -185,14 +192,6 @@
                         <article>
                             <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
                             <div>
-                                <h3>Php</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
                                 <h3>MySQL</h3>
                                 <p>Basic</p>
                             </div>
@@ -200,7 +199,21 @@
                         <article>
                             <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
                             <div>
+                                <h3>MongoDB</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+                            <div>
                                 <h3>Node.JS</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+                            <div>
+                                <h3>Express.js</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
