--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Basic</p>
+                                <p>Intermediate </p>
                             </div>
                         </article>
                         <article>
@@ -193,7 +193,7 @@
                             <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
                             <div>
                                 <h3>MySQL</h3>
-                                <p>Basic</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
