--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     onclick="location.href='http://www.linkedin.com/in/siddheshshende333'">
                 <img src="./assests/github.png" alt="Github profile" class="icons"
                     onclick="location.href='https://github.com/siddheshshende'">
-                    <img src="./assests/hashnode.png" alt="hashnode profile" class="icons"
+                <img src="./assests/hashnode.png" alt="hashnode profile" class="icons"
                     onclick="location.href='https://1-siddheshvlog.hashnode.dev/'">
             </li>
         </div>
@@ -101,7 +101,7 @@
                     onclick="location.href='http://www.linkedin.com/in/siddheshshende333'">
                 <img src="./assests/github.png" alt="Github profile" class="icons"
                     onclick="location.href='https://github.com/siddheshshende'">
-                    <img src="./assests/hashnode.png" alt="hashnode profile" class="icons"
+                <img src="./assests/hashnode.png" alt="hashnode profile" class="icons"
                     onclick="location.href='https://1-siddheshvlog.hashnode.dev/'">
             </div>
         </div>
@@ -232,7 +232,79 @@
             <div class="project-containers snaps-inline">
                 <div class="card-container">
                     <div class="p.article-container">
-                        <img src="./assests/netflixlandingpagephotoforproject.JPG" alt="Project 1" class="project-img">
+                        <img src="./assests/medicalpagerimg.JPG" alt="Project 1" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title"> Medical-Pager webchat </h2>
+                    <h4 class="tech.stack">Tech stack: React,Express,Node.js,API's,JavaScript,HTML,CSS</h4>
+                    <div class="btn-container">
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://github.com/siddheshshende/medical-pager-chat-app', '_blank')">
+                            Github
+                        </button>
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://medical-pager-webchat.netlify.app/', '_blank')">
+                            Live Demo
+                        </button>
+
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="p.article-container">
+                        <img src="./assests/university.JPG" alt="Project 2" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title"> Sage University Website </h2>
+                    <h4 class="tech.stack">Tech stack: React,Material-UI,JavaScript,HTML,CSS,API</h4>
+                    <div class="btn-container">
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://github.com/siddheshshende/React-university-website', '_blank')">
+                            Github
+                        </button>
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://sageuniversity.netlify.app/', '_blank')">
+                            Live Demo
+                        </button>
+
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="p.article-container">
+                        <img src="./assests/sportifyimg.png" alt="Project 3" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title"> Sportify-(chrome extension) </h2>
+                    <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript,API's </h4>
+                    <div class="btn-container">
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://github.com/siddheshshende/Sportify--chrome-extension', '_blank')">
+                            Github
+                        </button>
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://chromewebstore.google.com/detail/sportify/mgjahdmijkjbecnobbgpkldenchhfcjn', '_blank')">
+                            Live Demo
+                        </button>
+
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="p.article-container">
+                        <img src="./assests/portfoliothumbnail.JPG" alt="Project 4" class="project-img">
+                    </div>
+                    <h2 class="project-title"> Portfolio Website </h2>
+                    <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript </h4>
+                    <div class="btn-container">
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://lnkd.in/gZuTykg2', '_blank')">
+                            Github
+                        </button>
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://siddheshshendeportfolio.netlify.app/', '_blank')">
+                            Live Demo
+                        </button>
+
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="p.article-container">
+                        <img src="./assests/netflixlandingpagephotoforproject.JPG" alt="Project 5" class="project-img">
                     </div>
                     <h2 class="project-title">Netflix Landing Page Clone</h2>
                     <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript</h4>
@@ -244,57 +316,6 @@
                         </button>
                         <button class="btn btn-color2 project-btn"
                             onclick="window.open('https://siddhesh-netflix-clone.netlify.app/', '_blank')">
-                            Live Demo
-                        </button>
-
-                    </div>
-                </div>
-                <div class="card-container">
-                    <div class="p.article-container">
-                        <img src="./assests/portfoliothumbnail.JPG" alt="Project 2" class="project-img">
-                    </div>
-                    <h2 class="project-title"> Portfolio Website  </h2>
-                    <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript </h4>
-                    <div class="btn-container">
-                        <button class="btn btn-color2 project-btn"
-                            onclick="window.open('https://lnkd.in/gZuTykg2', '_blank')">
-                            Github
-                        </button>
-                        <button class="btn btn-color2 project-btn" onclick="window.open('https://siddheshshendeportfolio.netlify.app/', '_blank')">
-                            Live Demo
-                        </button>
-
-                    </div>
-                </div>
-                <div class="card-container">
-                    <div class="p.article-container">
-                        <img src="./assests/project-2.png" alt="Project 3" class="project-img">
-                    </div>
-                    <h2 class="experience-sub-title project-title"> Loading... </h2>
-                    <h4 class="tech.stack">Loading... </h4>
-                    <div class="btn-container">
-                        <button class="btn btn-color2 project-btn"
-                            onclick="window.open('https://github.com', '_blank')">
-                            Github
-                        </button>
-                        <button class="btn btn-color2 project-btn" onclick="window.open('https://', '_blank')">
-                            Live Demo
-                        </button>
-
-                    </div>
-                </div>
-                <div class="card-container">
-                    <div class="p.article-container">
-                        <img src="./assests/project-3.png" alt="Project 4" class="project-img">
-                    </div>
-                    <h2 class="experience-sub-title project-title"> Loading... </h2>
-                    <h4 class="tech.stack">Loading... </h4>
-                    <div class="btn-container">
-                        <button class="btn btn-color2 project-btn"
-                            onclick="window.open('https://github.com', '_blank')">
-                            Github
-                        </button>
-                        <button class="btn btn-color2 project-btn" onclick="window.open('https://', '_blank')">
                             Live Demo
                         </button>
 
