--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
         <div class="project-detail-container">
             <div class="project-containers snaps-inline">
                 <div class="card-container">
-                    <div class="p.article-container">
+                    <div class="p-article-container">
                         <img src="./assests/medicalpagerimg.JPG" alt="Project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title"> Medical-Pager webchat </h2>
-                    <h4 class="tech.stack">Tech stack: React,Express,Node.js,API's,JavaScript,HTML,CSS</h4>
+                    <h4 class="tech-stack">Tech stack: React,Express,Node.js,API's,JavaScript,HTML,CSS</h4>
                     <div class="btn-container">
                         <button class="btn btn-color2 project-btn"
                             onclick="window.open('https://github.com/siddheshshende/medical-pager-chat-app', '_blank')">
@@ -249,11 +249,11 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <div class="p.article-container">
+                    <div class="p-article-container">
                         <img src="./assests/university.JPG" alt="Project 2" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title"> Sage University Website </h2>
-                    <h4 class="tech.stack">Tech stack: React,Material-UI,JavaScript,HTML,CSS,API</h4>
+                    <h4 class="tech-stack">Tech stack: React,Material-UI,JavaScript,HTML,CSS,API</h4>
                     <div class="btn-container">
                         <button class="btn btn-color2 project-btn"
                             onclick="window.open('https://github.com/siddheshshende/React-university-website', '_blank')">
@@ -267,11 +267,11 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <div class="p.article-container">
+                    <div class="p-article-container">
                         <img src="./assests/sportifyimg.png" alt="Project 3" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title"> Sportify-(chrome extension) </h2>
-                    <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript,API's </h4>
+                    <h4 class="tech-stack">Tech stack: HTML, CSS, JavaScript,API's </h4>
                     <div class="btn-container">
                         <button class="btn btn-color2 project-btn"
                             onclick="window.open('https://github.com/siddheshshende/Sportify--chrome-extension', '_blank')">
@@ -285,11 +285,11 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <div class="p.article-container">
+                    <div class="p-article-container">
                         <img src="./assests/portfoliothumbnail.JPG" alt="Project 4" class="project-img">
                     </div>
                     <h2 class="project-title"> Portfolio Website </h2>
-                    <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript </h4>
+                    <h4 class="tech-stack">Tech stack: HTML, CSS, JavaScript </h4>
                     <div class="btn-container">
                         <button class="btn btn-color2 project-btn"
                             onclick="window.open('https://lnkd.in/gZuTykg2', '_blank')">
@@ -303,11 +303,11 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <div class="p.article-container">
+                    <div class="p-article-container">
                         <img src="./assests/netflixlandingpagephotoforproject.JPG" alt="Project 5" class="project-img">
                     </div>
                     <h2 class="project-title">Netflix Landing Page Clone</h2>
-                    <h4 class="tech.stack">Tech stack: HTML, CSS, JavaScript</h4>
+                    <h4 class="tech-stack">Tech stack: HTML, CSS, JavaScript</h4>
 
                     <div class="btn-container">
                         <button class="btn btn-color2 project-btn"
