--- a/index.html
+++ b/index.html
@@ -230,9 +230,28 @@
         <h1 class="title"> Project </h1>
         <div class="project-detail-container">
             <div class="project-containers snaps-inline">
+   <div class="card-container">
+                    <div class="p-article-container">
+                        <img src="./assests/3.png" alt="Project 1" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title"> PostGen-Bot </h2>
+                    <h4 class="tech-stack">Tech stack: Express,Node.js,MongoDB,Telegram,OpenAI</h4>
+                    <div class="btn-container">
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://github.com/siddheshshende/PostGen-Bot', '_blank')">
+                            Github
+                        </button>
+                        <button class="btn btn-color2 project-btn"
+                            onclick="window.open('https://t.me/Post2Generate_bot', '_blank')">
+                            Live Demo
+                        </button>
+
+                    </div>
+                </div>
+                
                 <div class="card-container">
                     <div class="p-article-container">
-                        <img src="./assests/medicalpagerimg.JPG" alt="Project 1" class="project-img">
+                        <img src="./assests/medicalpagerimg.JPG" alt="Project 2" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title"> Medical-Pager webchat </h2>
                     <h4 class="tech-stack">Tech stack: React,Express,Node.js,API's,JavaScript,HTML,CSS</h4>
@@ -250,7 +269,7 @@
                 </div>
                 <div class="card-container">
                     <div class="p-article-container">
-                        <img src="./assests/university.JPG" alt="Project 2" class="project-img">
+                        <img src="./assests/university.JPG" alt="Project 3" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title"> Sage University Website </h2>
                     <h4 class="tech-stack">Tech stack: React,Material-UI,JavaScript,HTML,CSS,API</h4>
@@ -268,7 +287,7 @@
                 </div>
                 <div class="card-container">
                     <div class="p-article-container">
-                        <img src="./assests/sportifyimg.png" alt="Project 3" class="project-img">
+                        <img src="./assests/sportifyimg.png" alt="Project 4" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title"> Sportify-(chrome extension) </h2>
                     <h4 class="tech-stack">Tech stack: HTML, CSS, JavaScript,API's </h4>
@@ -286,7 +305,7 @@
                 </div>
                 <div class="card-container">
                     <div class="p-article-container">
-                        <img src="./assests/portfoliothumbnail.JPG" alt="Project 4" class="project-img">
+                        <img src="./assests/portfoliothumbnail.JPG" alt="Project 5" class="project-img">
                     </div>
                     <h2 class="project-title"> Portfolio Website </h2>
                     <h4 class="tech-stack">Tech stack: HTML, CSS, JavaScript </h4>
@@ -304,7 +323,7 @@
                 </div>
                 <div class="card-container">
                     <div class="p-article-container">
-                        <img src="./assests/netflixlandingpagephotoforproject.JPG" alt="Project 5" class="project-img">
+                        <img src="./assests/netflixlandingpagephotoforproject.JPG" alt="Project 6" class="project-img">
                     </div>
                     <h2 class="project-title">Netflix Landing Page Clone</h2>
                     <h4 class="tech-stack">Tech stack: HTML, CSS, JavaScript</h4>
