--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="project-containers snaps-inline">
    <div class="card-container">
                     <div class="p-article-container">
-                        <img src="./assests/3.png" alt="Project 1" class="project-img">
+                        <img src="assests/3.jpg" alt="Project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title"> PostGen-Bot </h2>
                     <h4 class="tech-stack">Tech stack: Express,Node.js,MongoDB,Telegram,OpenAI</h4>
