--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="section_text">
             <p class="section_text_p1"> Hello, I'm</p>
             <h1 class="title"> Siddhesh Shende </h1>
-            <p class="section_text_p2"> Frontend Developer </p>
+            <p class="section_text_p2"> Full Stack Developer </p>
             <div class="btn_container">
                 <button class="btn btn-color1" onclick="window.open('./assests/siddheshshende_Resume.pdf')"> Download
                     CV</button>
@@ -120,7 +120,11 @@
                     <div class="detail-container">
                         <img src="./assests/experience.png" alt="experience icon" class="icons">
                         <h3>Experience</h3>
-                        <p>Fresher<br> Frontend Development</p>
+                          <p>
+                Full Stack Developer Intern at <a href="https://nuverse.in/" target="_blank">Nuverse</a><br>
+                Campus Ambassador<br>
+                Frontend Development
+            </p>
                     </div>
                     <div class="detail-container">
                         <img src="./assests/education.png" alt="education icon" class="icons">
@@ -129,101 +133,90 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p> Confident and result-driven frontend developer and working as Campus
-                        ambassador.
-                        Additionally, I am contributing to open source projects recently and, also have the honour of
-                        representing the Institute
-                        Innovation Council as a student innovation ambassador.
-                    </p>
+                      <p>
+            Confident and result-driven frontend developer currently working as a 
+            <strong>Full Stack Developer Intern at <a href="https://nuverse.in/" target="_blank">Nuverse</a></strong>. 
+            I’m also actively involved as a Campus Ambassador and contribute to open source projects. 
+            Additionally, I have the honour of representing the Institute Innovation Council as a 
+            Student Innovation Ambassador.
+        </p>
                 </div>
             </div>
         </div>
         <img src="./assests/arrow.png" alt="arrow image" class="arrow_icon" onclick="location.href='#experience'">
     </section>
 
-    <section id="experience">
-        <p class="section_text_p1"> Explore My</p>
-        <h1 class="title"> Experience </h1>
-        <div class="experience-detail-container">
-            <div class="about-containers">
-                <div class="detail-container">
-                    <h2 class="experience-sub-title">Frontend Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Advanced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>CSS</h3>
-                                <p>Advanced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>JavaScript</h3>
-                                <p>Intermediate </p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>Material UI</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>React.JS</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="detail-container">
-                    <h2 class="experience-sub-title">Backend Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>MySQL</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>MongoDB</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>Node.JS</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
-                            <div>
-                                <h3>Express.js</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-
-                    </div>
-                </div>
-            </div>
+<section id="experience"> 
+  <p class="section_text_p1">Explore My</p>
+  <h1 class="title">Experience</h1>
+  <div class="experience-detail-container">
+    <div class="about-containers">
+      <!-- Frontend Development -->
+      <div class="detail-container">
+        <h2 class="experience-sub-title">Frontend Development</h2>
+        <div class="article-container">
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>HTML</h3><p>Advanced</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>CSS</h3><p>Advanced</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>JavaScript</h3><p>Intermediate</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>Material UI</h3><p>Basic</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>React.JS</h3><p>Basic</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>Next.js</h3><p>Intermediate</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>Tailwind CSS</h3><p>Intermediate</p></div>
+          </article>
         </div>
-        <img src="./assests/arrow.png" alt="arrow image" class="arrow_icon" onclick="location.href='#project'">
-    </section>
+      </div>
+
+      <!-- Backend Development -->
+      <div class="detail-container">
+        <h2 class="experience-sub-title">Backend Development</h2>
+        <div class="article-container">
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>MySQL</h3><p>Intermediate</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>MongoDB</h3><p>Intermediate</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>Node.JS</h3><p>Basic</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>Express.js</h3><p>Basic</p></div>
+          </article>
+          <article>
+            <img src="./assests/checkmark.png" alt="checkmark symbol" class="icons">
+            <div><h3>REST API</h3><p>Basic</p></div>
+          </article>
+        </div>
+      </div>
+    </div>
+  </div>
+  <img src="./assests/arrow.png" alt="arrow image" class="arrow_icon" onclick="location.href='#project'">
+</section>
+
 
     <section id="project">
         <p class="section_text_p1"> Browse My Recent </p>
