Updated Resume index.html

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <meta property="og: title" content="Siddhesh Shende" />
     <meta property="og: site_name" content="Siddhesh Shende" />
     <meta property="og: url" content="http://127.0.0.1:5500/index.html" />
-    <meta property="og:description" content="Hey my name is Siddhesh Shende. I'm a Web Developer!" />
+    <meta property="og:description" content="Hey my name is Siddhesh Shende. I'm a Full Stack Developer!" />
     <meta property="og: type" content="website" />
     <meta property="og:image"
         content="https://drive.google.com/file/d/1pCQV3uTjzzoNJZt1JlhdbL1ikitloUww/view?usp=sharing" />
     <meta name="title" content="Siddhesh Shende" />
-    <meta name="description" content="Hey,🤚 my name is Siddhesh Shende. I'm a Web Developer!" />
+    <meta name="description" content="Hey,🤚 my name is Siddhesh Shende. I'm a Full Stack Developer!" />
     <meta name="keywords"
         content="siddhesh, Siddhesh, Siddhesh Shende, portfolio website, portfolio, siddhesh portfolio" />
 
 
     <!-- LinkedIn metadata -->
     <meta property="og:title" content="Siddhesh Shende" />
-    <meta property="og:description" content="Hey, my name is Siddhesh Shende. I'm a Web Developer!" />
+    <meta property="og:description" content="Hey, my name is Siddhesh Shende. I'm a Full Stack Developer!" />
     <meta property="og:image"
         content="https://drive.google.com/file/d/1pCQV3uTjzzoNJZt1JlhdbL1ikitloUww/view?usp=sharing" />
     <meta property="og:url" content="https://www.linkedin.com/in/siddheshshende333" />
@@ -92,7 +92,7 @@
             <h1 class="title"> Siddhesh Shende </h1>
             <p class="section_text_p2"> Full Stack Developer </p>
             <div class="btn_container">
-                <button class="btn btn-color1" onclick="window.open('./assests/siddheshshende_Resume.pdf')"> Download
+                <button class="btn btn-color1" onclick="window.open('./assests/Siddhesh-Resume')"> Download
                     CV</button>
                 <button class="btn btn-color2" onclick="location.href='./#contact'"> Contact Details </button>
             </div>
