--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h1 class="title"> Siddhesh Shende </h1>
             <p class="section_text_p2"> Full Stack Developer </p>
             <div class="btn_container">
-                <button class="btn btn-color1" onclick="window.open('./assests/Siddhesh-Resume')"> Download
+                <button class="btn btn-color1" onclick="window.open('./assests/Siddhesh-Resume.pdf')"> Download
                     CV</button>
                 <button class="btn btn-color2" onclick="location.href='./#contact'"> Contact Details </button>
             </div>
